formatação no arquivo README

--- a/README
+++ b/README
@@ -6,5 +6,4 @@ Aplicação de exemplos apresentados nas aulas de React.JS durante o bootcamp Re
         - JSX;
         - Elementos recebendo propriedades em JSON;
         - Componentes funcionais;
-        - Componentes de classes;
-        - 
+        - Componentes de classes.
