--- a/README
+++ b/README
@@ -1,9 +1,38 @@
-Aplicação de exemplos apresentados nas aulas de React.JS durante o bootcamp Recode PRO 2022 no módulo React Fundamentos & Intermediário.
+# Introdução ao React
 
-    Conceitos aplicados:
-        - Entendendo a estrutura de uma aplicação React;
-        - Regras de importação/exportação de elementos;
-        - JSX;
-        - Elementos recebendo propriedades em JSON;
-        - Componentes funcionais;
-        - Componentes de classes.
+## Informações do projeto
+
+
+#### Introdução ao uso da bliblioteca ReactJS:
+
+###### Front-end de demonstração da estrutura de uma aplicação em ReactJS nas regras de importação/exportação de elementos, JSX, componentes de classe & funcionais e propriedades JSON para exercitar os conhecimentos apresentados durante o módulo 4 "Desenvolvimento de Sistemas, nível 2" no bootcamp Recode Pro 2022;
+
+
+### Execução da Aplicação
+
+<table>
+<tr>
+	<th>Ferramenta</th>
+	<th>Versão</th>
+</tr>
+<tr>
+	<td>Node.js</td>
+	<td>18.+</td>
+</tr>
+<tr>
+	<td>React</td>
+	<td>18.**</td>
+</tr>
+</table>
+
+
+#### Tecnologias Utilizadas:  
+ 
+
+<div style="display: inline_block"><br>  
+<img align="center" alt="React" height="30" width="40" src="https://cdn.icon-icons.com/icons2/2415/PNG/512/react_original_wordmark_logo_icon_146375.png" />
+<img align="center" alt="Node" height="40" width="35" src="https://cdn.icon-icons.com/icons2/2622/PNG/512/brand_node_icon_157859.png" />
+
+
+
+</div>  
